--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,29 @@
     transform: rotate(360deg);
   }
 }
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  margin: 40px auto 0 auto;
+  background-color: #FFF;
+  padding: 30px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+a {
+  min-width: 180px;
+  max-width: 25%;
+  display: flex;
+}
+
+img {
+  max-width:100%;
+  height: auto;
+}
